objects/Programme_Version__c.object
<CustomObject><fields>
<fields>
        <fullName>XEntry_Award_2__c</fullName>
        <label>XEntry Award 2</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>XEntry_Award_3__c</fullName>
        <label>XEntry Award 3</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>XExit_Award_1__c</fullName>
        <label>XExit Award 1</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>XExit_Award_2__c</fullName>
        <label>XExit Award 2</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>XExit_Award_3__c</fullName>
        <label>XExit Award 3</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Programme Version</label><nameField>
        <label>Programme Version Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Programme Versions</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>All_MSc_Programme_Versions</fullName>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <columns>Options__c</columns>
        <columns>Overview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <label>All MSc Programme Versions</label>
    </listViews><listViews>
        <fullName>All_Online_Course_Versions</fullName>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>For_website__c</columns>
        <columns>Programme_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Online Course</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <label>All Online Course Versions</label>
    </listViews><listViews>
        <fullName>All_PGR_Versions</fullName>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>Code__c</columns>
        <columns>PGR_Type__c</columns>
        <columns>Mode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>PGR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions,Programme_Version__c.Master_Version</value>
        </filters>
        <label>All PGR Versions</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_Programme_Specifications</fullName>
        <columns>Programme_Type__c</columns>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme,Professional Diploma</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <label>All Programme Specifications</label>
    </listViews><listViews>
        <fullName>All_Programme_Versions_2014_15</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>14/15</value>
        </filters>
        <label>All Programme Versions 2014/15</label>
    </listViews><listViews>
        <fullName>All_Programme_Versions_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>15/16</value>
        </filters>
        <label>All Programme Versions 2015/16</label>
    </listViews><listViews>
        <fullName>All_Programme_Versions_2016_17</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Entry_Award_1__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>16/17</value>
        </filters>
        <label>All Programme Versions 2016/17</label>
    </listViews><listViews>
        <fullName>All_Programme_Versions_for_Website</fullName>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>For_website__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Director_of_Studies__c</columns>
        <columns>Duration__c</columns>
        <columns>Home_EU_Fee__c</columns>
        <columns>Overseas_Fee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Additional_Costs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>For_website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Website uploads</label>
    </listViews><listViews>
        <fullName>All_Short_Course_Versions</fullName>
        <columns>NAME</columns>
        <columns>Master_Link__c</columns>
        <columns>Code__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>For_website__c</columns>
        <columns>Programme_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Masters Module,Short Course</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <label>All Short Course Versions</label>
    </listViews><listViews>
        <fullName>MSc_Programme_Versions_2014_15</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme,Professional Diploma</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>14/15</value>
        </filters>
        <label>MSc Programme Versions 2014/15</label>
    </listViews><listViews>
        <fullName>MSc_Programme_Versions_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Version_Suffix__c</field>
            <operation>equals</operation>
            <value>15/16</value>
        </filters>
        <label>MSc Programme Versions 2015/16</label>
    </listViews><listViews>
        <fullName>MSc_Programme_Versions_2016_17</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Version_Suffix__c</field>
            <operation>equals</operation>
            <value>16/17</value>
        </filters>
        <label>MSc Programme Versions 2016/17</label>
    </listViews><listViews>
        <fullName>MSc_Programme_Versions_2017_18</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Academic_Credits__c</columns>
        <columns>Programme_Version_Ref__c</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>For_website__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <filters>
            <field>Version_Suffix__c</field>
            <operation>equals</operation>
            <value>17/18</value>
        </filters>
        <label>MSc Programme Versions 2017/18</label>
    </listViews><listViews>
        <fullName>Only_Master_Records</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Application_Form_Type__c</columns>
        <columns>Code__c</columns>
        <columns>Mode__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>HESA_Audit__c</columns>
        <columns>Overview__c</columns>
        <columns>Options__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Master_Version</value>
        </filters>
        <label>Only Master Records</label>
    </listViews><listViews>
        <fullName>Only_Version_Records</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Homepage_VLE_ID__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Version_Suffix__c</columns>
        <columns>Master_Link__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Programme_Version__c.Versions</value>
        </filters>
        <label>Only Version Records (non-Masters)</label>
    </listViews><recordTypes>
        <fullName>Master_Version</fullName>
        <active>true</active>
        <description>Most senior level, defines family of related versions and instances</description>
        <label>Master Version</label>
    </recordTypes><recordTypes>
        <fullName>Specification</fullName>
        <active>true</active>
        <label>Specification</label>
    </recordTypes><recordTypes>
        <fullName>Specification_Edit</fullName>
        <active>true</active>
        <description>for early stage specifications</description>
        <label>Specification Edit</label>
    </recordTypes><recordTypes>
        <fullName>Versions</fullName>
        <active>true</active>
        <description>Annual (or other) iterations per programme</description>
        <label>Versions</label>
    </recordTypes><recordTypes>
        <fullName>Versions_Pre_Approved</fullName>
        <active>true</active>
        <description>for early stage specifications</description>
        <label>Versions - Pre Approved</label>
    </recordTypes></CustomObject>